add routesfile config

--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,9 @@
             ],
             "scripts": [],
             "server": "src/main.server.ts",
-            "prerender": true,
+            "prerender": {
+              "routesFile": "src/assets/routes.txt"
+            },
             "ssr": {
               "entry": "server.ts"
             }
