--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - name: Install
-      - run: npm ci
+        run: npm ci
       - name: Build
-      - run: npm run build --if-present
+        run: npm run build --if-present
