--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,27 +37,16 @@ jobs:
         run: pwd
       - name: Build
         run: npm run build --if-present
-
-  list-files:
-    runs-on: ubuntu-latest
-    outputs:
-      paths: ${{ steps.list-files.outputs.paths }}
-    steps:
-      - name: List Files
-        id: list-files
-        uses: mirko-felice/list-files-action@v3.0.5
+      - name: List files
+        id: pl
+        uses: Rishabh510/Path-lister-action@master
         with:
-          repo: ${{ github.repository }}
-          ref: ${{ github.ref }}
           path: "dist"
-          ext: ".yml"
-  Test:
-    needs: list-files
-    strategy:
-      matrix:
-        paths: ${{ fromJson(needs.list-files.outputs.paths) }}
-    runs-on: ubuntu-latest
-    steps:
+          type: ".html"
+
       - name: Output results
         run: |
-          echo ${{ matrix.paths }}
+          echo "Found ${{ steps.pl.outputs.path_count }} file(s) with this extension:"
+          for i in ${{ steps.pl.outputs.paths }}; do
+          echo $i
+          done
