--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,3 +38,13 @@ jobs:
         run: npm run build --if-present
       - name: List dist files
         run: ls -R dist/ng-ssg-async
+      - name: Deploy to Netlify
+        uses: jsmrcaga/action-netlify-deploy@v2.0.0
+        with:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NETLIFY_DEPLOY_MESSAGE: "Deployed from GitHub action"
+          NETLIFY_DEPLOY_TO_PROD: true
+          build_directory: 'dist/ng-ssg-async/browser'
+          install_command: "echo Skipping installing the dependencies"
+          build_command: "echo Skipping building the web files"
